# MCHammer

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
.pixi/envs/default/conda-meta/: bzip2-1.0.8-h99b78c6_7.json  ca-certificates-2024.8.30-hf0a4a13_0.json  colorama-0.4.6-pyhd8ed1ab_0.json  exceptiongroup-1.2.2-pyhd8ed1ab_0.json  iniconfig-2.0.0-pyhd8ed1ab_0.json  libblas-3.9.0-24_osxarm64_openblas.json  libcblas-3.9.0-24_osxarm64_openblas.json  libcxx-19.1.1-ha82da77_0.json  libexpat-2.6.3-hf9b8971_0.json  libffi-3.4.2-h3422bc3_5.json  libgfortran-5.0.0-13_2_0_hd922786_3.json  libgfortran5-13.2.0-hf226fd6_3.json  liblapack-3.9.0-24_osxarm64_openblas.json  libopenblas-0.3.27-openmp_h517c56d_1.json  libsqlite-3.46.1-hc14010f_0.json  libzlib-1.3.1-h8359307_2.json  llvm-openmp-19.1.0-hba312e6_0.json  ncurses-6.5-h7bae524_1.json  numpy-2.1.2-py312h801f5e3_0.json  openssl-3.3.2-h8359307_0.json  packaging-24.1-pyhd8ed1ab_0.json  pixi  pixi_env_prefix  pluggy-1.5.0-pyhd8ed1ab_0.json  pytest-8.3.3-pyhd8ed1ab_0.json  python-3.12.7-h739c21a_0_cpython.json  python_abi-3.12-5_cp312.json  readline-8.2-h92ec313_1.json  ruff-0.6.9-py312h42f095d_0.json  tk-8.6.13-h5083fa2_1.json  tomli-2.0.2-pyhd8ed1ab_0.json  tzdata-2024b-hc8b5060_0.json  xz-5.2.6-h57fd34a_0.json
.pixi/envs/default/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.pixi/envs/default/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.pixi/envs/default/share/terminfo/64/: ddr  dec-vt220
.pixi/envs/default/share/terminfo/65/: emu-220
.pixi/envs/default/share/terminfo/67/: go140  go140w  go225
.pixi/envs/default/share/terminfo/68/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
.pixi/envs/default/share/terminfo/69/: ims-ansi
.pixi/envs/default/share/terminfo/6b/: kt7
.pixi/envs/default/share/terminfo/6d/: mai  mt4520-rv
.pixi/envs/default/share/terminfo/6e/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-old-unk  news-unk  news28  news29  nwp512  nwp512-a  nwp513  nwp513-a  nwp517  nwp517-w
.pixi/envs/default/share/terminfo/6f/: opus3n1+  otek4115
.pixi/envs/default/share/terminfo/70/: pcmw  pcvt25  pcvt25-color  pcvt25w  pcvt28  pcvt28w  pcvt35  pcvt35w  pcvt40  pcvt40w  pcvt43  pcvt43w  pcvt50  pcvt50w  pcvtXX
.pixi/envs/default/share/terminfo/74/: ti916  ti916-132  ti916-8  ti916-8-132  tvi9065  tvi910  tvi910+  tvi912  tvi912b  tvi912b-2p  tvi912b-2p-mc  tvi912b-2p-p  tvi912b-2p-unk  tvi912b-mc  tvi912b-p  tvi912b-unk  tvi912b-vb  tvi912b-vb-mc  tvi912b-vb-p  tvi912b-vb-unk  tvi912cc  tvi920b  tvi920b-2p  tvi920b-2p-mc  tvi920b-2p-p  tvi920b-2p-unk  tvi920b-mc  tvi920b-p  tvi920b-unk  tvi920b-vb  tvi920b-vb-mc  tvi920b-vb-p  tvi920b-vb-unk  tvi921  tvi924  tvi92B  tvi92D  tvipt
.pixi/envs/default/share/terminfo/75/: uniterm  uts30
.pixi/envs/default/share/terminfo/76/: versaterm  vt200-js  vt220  vt220-8bit  vt220-base  vt220-nam  vt220-old  vt220-w  vt220d  vt320  vt320-k311  vt320-nam  vt320-w  vt320-w-nam  vt320nam  vt340  vt400  vt420  vt420f  vt420pc  vt420pcdos  vt510  vt510pc  vt510pcdos  vt520  vt520ansi  vt525
.pixi/envs/default/share/terminfo/77/: wsvt25  wsvt25m
.pixi/envs/default/share/terminfo/78/: x68k
.pixi/envs/default/share/terminfo/7a/: z29a  z29a-kc-uc  z29a-nkc-bc  z29a-nkc-uc  z340  z340-nam
docs/: api_tab.md  basic_usage.md  conf.py  index.md
docs/api/: mchammers.rst
docs/notebooks/: test.ipynb  test.md  tutorial.ipynb
src/MCHammer/: __init__.py  hammer.py  hmc.py  metropolis.py  nested.py  test.ipynb
src/mchammers/: __init__.py  hammer.py
tests/: integration_test.py  test_integration.py  test_mpi.py  test_package.py  test_stretch.py  test_unit.py  unit_test.py
